--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,12 @@ body::-webkit-scrollbar-track {
   display: flex;
   justify-content: center;
 }
+
+body , html, .particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
